[package]
name = "umsrs"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
builtin-token = []

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "io-std"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
time = { version = "0.3.19", features = ["formatting", "macros"] }
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2.0"
dialoguer = { version = "0.10.3", default-features = false }
indicatif = "0.17.3"
dirs = "4.0.0"
csv = "1.2.0"
once_cell = "1.17.1"
ctrlc = { version = "3.0", features = ["termination"] }
